Sat May 31 2003  Vitezslav Samel <samel@mail.cz>
	* configure.ac:
	change version number to include _CVS suffix

Mon May  5 2003  Vitezslav Samel <samel@mail.cz>
	*** Release joe-2.9.8 ***

	* NEWS, configure.ac, main.c:
	update NEWS; bump up version; update copyright year
	
Sat May  3 2003  Vitezslav Samel <samel@mail.cz>
	* README:
	delete untrue statements and mention the new build system;
	this file needs some more work

Sat Mar 22 2003  Vitezslav Samel <samel@mail.cz>
	* jstarrc.in, rc.c:
	fix typos (patch by Jesse McGrew)

Sat Mar 22 2003  Vitezslav Samel <samel@mail.cz>
	* cmd.c:
	fix memleak in docmd() (patch by Jesse McGrew)

Sat Mar 22 2003  Vitezslav Samel <samel@mail.cz>
	* path.c:
	use O_EXCL when creating temporary file

Sun Mar  2 2003  Vitezslav Samel <samel@mail.cz>
	* bw.c, cmd.c, hash.c, kbd.c, macro.c, main.c, menu.c, path.c,
	poshist.c, pw.c, qw.c, rc.c, regex.c, scrn.c, tab.c, termcap.c, tty.c,
	tw.c, ublock.c, uedit.c, uerror.c, ufile.c, uisrch.c, umath.c, undo.c,
	usearch.c, ushell.c, utag.c, vfile.c, vs.c, w.c:
	change 0 to NULL where we're talking about pointers

Sun Mar  2 2003  Vitezslav Samel <samel@mail.cz>
	* vs.c, vs.h:
	make vsrm() and slen() of type sELEMENT *

Sat Feb 22 2003  Vitezslav Samel <samel@mail.cz>
	* configure.ac:
	remove AC_FUNC_MALLOC check; this fixes problem with compilation
	on alpha; we should check for size == 0 in joe_malloc()

Wed Feb 19 2003  Vitezslav Samel <samel@mail.cz>
	* b.c, b.h, cmd.c, cmd.h, help.c, kbd.c, kbd.h, macro.c, macro.h,
	main.c, rc.c, rc.h, regex.c, uisrch.c:
	change type of variables holding string to unsigned char *

Wed Feb 19 2003  Vitezslav Samel <samel@mail.cz>
	* b.c, tw.c:
	change type of variables holding time values to time_t

Sat Feb 15 2003  Vitezslav Samel <samel@mail.cz>
	* b.c, b.h, bw.c, config.h, macro.c, regex.c, tty.c, ublock.c, uedit.c,
	uerror.c, uformat.c, uisrch.c, usearch.c, utag.c, utils.c, utils.h,
	vfile.c, vfile.h: